Adding e2e tests for SC Summary page

--- a/defend_data_capture/supply_chains/templates/includes/sc_key_info_list.html
+++ b/defend_data_capture/supply_chains/templates/includes/sc_key_info_list.html
@@ -3,7 +3,7 @@
 <dl class="govuk-summary-list">
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        The contact for this supply chain
+        The contact for<br> this supply chain
       </dt>
       <dd class="govuk-summary-list__value">
         {{ supply_chain.contact_name }}
@@ -16,7 +16,7 @@
     </div>
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        The email for supply chain contact
+        The email for the<br> supply chain contact
       </dt>
       <dd class="govuk-summary-list__value">
         {{ supply_chain.contact_email }}
