--- a/defend_data_capture/supply_chains/templates/sc_summary.html
+++ b/defend_data_capture/supply_chains/templates/sc_summary.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block breadcrumbs %}
-<div class="govuk-breadcrumbs">
+<nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
       <li class="govuk-breadcrumbs__list-item">
         <a class="govuk-breadcrumbs__link" href={% url 'index' %}>Home</a>
@@ -14,7 +14,7 @@
         <a class="govuk-breadcrumbs__link" href="#">Full details of {{ supply_chain.name }}</a>
       </li>
     </ol>
-  </div>
+  </nav>
 {% endblock %}
 
 {% block body %}
@@ -81,21 +81,6 @@
               <p class='govuk-body'>This is the content for Risk monitoring.</p>
             </div>
           </div>
-          {% comment %}
-          <div class="govuk-accordion__section ">
-            <div class="govuk-accordion__section-header">
-              <h2 class="govuk-accordion__section-heading">
-                <span class="govuk-accordion__section-button" id="accordion-default-heading-6">
-                  Archived strategic actions
-                </span>
-              </h2>
-            </div>
-
-            <div id="accordion-default-content-6" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-6">
-              <p class='govuk-body'>This is the content for Archived strategic actions.</p>
-            </div>
-          </div>
-          {% endcomment %}
       </div>
 
     <a href={% url 'tlist' sc_slug=supply_chain.slug %} class="govuk-button govuk-button--secondary btn" data-module="govuk-button">Back to task list</a>
