--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-summary.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-summary.html
@@ -85,7 +85,7 @@
                                 Submit
                             </button>
 
-                            <a href="{% url 'strategic-actions' %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
+                            <a href="{% url 'tlist' sc_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
                                 Cancel
                             </a>
                         </div>
