Fix cancel buttons.

--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-revised-timing-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-revised-timing-form.html
@@ -24,9 +24,9 @@
                 Save and continue
             </button>
 
-            <button class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
+            <a href="{% url 'tlist' sc_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
                 Cancel
-            </button>
+            </a>
         </div>
     </form>
 {% endblock body %}
