Fix missing breadcrumbs on summary page.

--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-summary.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-summary.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'supply_chains/monthly-update-form-base.html' %}
 
 {% block body %}
                     <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
