--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-summary.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-summary.html
@@ -40,25 +40,43 @@
         </dl>
     {% endif %}
 
-                    <dl class="govuk-summary-list govuk-!-margin-bottom-3">
-                        <div class="govuk-summary-list__row{% if not has_revised_date_of_completion %} govuk-summary-list__row--no-border class.{% endif %}">
-                            <dt class="govuk-summary-list__key">
-                                Current delivery status
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                {{ strategic_action_update.get_implementation_rag_rating_display }}
-                                {% if strategic_action_update.implementation_rag_rating != 'GREEN' %}
-                                    <br>
-                                    {{ strategic_action_update.reason_for_delays }}
-                                {% endif %}
-                            </dd>
-                            <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" href="{% url 'monthly-update-timing-edit' supply_chain_slug=strategic_action_update.strategic_action.supply_chain.slug strategic_action_slug=strategic_action_update.strategic_action.slug update_slug=strategic_action_update.slug %}">
-                                    Change<span class="govuk-visually-hidden"> current delivery status</span>
-                                </a>
-                            </dd>
-                        </div>
-                    </dl>
+    {% if has_new_date_of_completion %}
+        <dl class="govuk-summary-list govuk-!-margin-bottom-3">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Estimated date of completion
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    {{ strategic_action_update.changed_target_completion_date|date:"j F Y" }}
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" href="{% url 'monthly-update-revised-timing-edit' supply_chain_slug=strategic_action_update.strategic_action.supply_chain.slug strategic_action_slug=strategic_action_update.strategic_action.slug update_slug=strategic_action_update.slug %}">
+                        Change<span class="govuk-visually-hidden"> revised estimated date of completion</span>
+                    </a>
+                </dd>
+            </div>
+        </dl>
+    {% endif %}
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-3">
+        <div class="govuk-summary-list__row{% if not has_revised_date_of_completion %} govuk-summary-list__row--no-border{% endif %}">
+            <dt class="govuk-summary-list__key">
+                Current delivery status
+            </dt>
+            <dd class="govuk-summary-list__value">
+                {{ strategic_action_update.get_implementation_rag_rating_display }}
+                {% if strategic_action_update.implementation_rag_rating != 'GREEN' %}
+                    <br>
+                    {{ strategic_action_update.reason_for_delays }}
+                {% endif %}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="{% url 'monthly-update-timing-edit' supply_chain_slug=strategic_action_update.strategic_action.supply_chain.slug strategic_action_slug=strategic_action_update.strategic_action.slug update_slug=strategic_action_update.slug %}">
+                    Change<span class="govuk-visually-hidden"> current delivery status</span>
+                </a>
+            </dd>
+        </div>
+    </dl>
 
     {% if has_revised_date_of_completion %}
         <dl class="govuk-summary-list govuk-!-margin-bottom-3">
