Fix for completion date in headers.

--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-status-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-status-form.html
@@ -2,6 +2,7 @@
 
 {% block body %}
     <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
+    {% include 'supply_chains/mu-existing-completion-date.html' %}
     {% with strategic_action.last_submitted_update as previous_update %}
         {% if previous_update.content %}
             <div class="app-dit-panel">
