--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
@@ -2,20 +2,7 @@
 
 {% block body %}
     <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
-        {% if strategic_action_update.strategic_action.target_completion_date %}
-            <div class="govuk-inset-text">
-                <h2 class="govuk-heading-s">Current estimated date of completion</h2>
-                <p>{{ strategic_action_update.strategic_action.target_completion_date|date:"j F Y" }}</p>
-            </div>
-        {% else %}
-            <div class="govuk-warning-text">
-                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">Warning</span>
-                    There's no expected completion date for this action.
-                </strong>
-            </div>
-        {% endif %}
+        {% include 'supply_chains/mu-existing-completion-date.html' %}
         <form method="post" action="">
             {% csrf_token %}
             {{ form.is_completion_date_known }}
