--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -4,10 +4,10 @@
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
       <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href={% url 'index' %}>Home</a>
+        <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
       </li>
       <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="#">Update {{ view.supply_chain.name }}</a>
+        <a class="govuk-breadcrumbs__link" href="{% url 'tlist' view.supply_chain.slug %}" aria-current="page">{{ view.supply_chain.name }}</a>
       </li>
     </ol>
 </nav>
