--- a/defend_data_capture/supply_chains/templates/supply_chains/includes/completion-date.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/includes/completion-date.html
@@ -1,7 +1,6 @@
 <div class="govuk-form-group">
-    {% with form=form %}
-        {{ form }}
-    {% endwith %}
+    <!-- completion-date.html -->
+    {{ form.changed_target_completion_date }}
 {#        <fieldset class="govuk-fieldset" role="group" aria-describedby="{{ widget.id }}-hint">#}
 {#            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">#}
 {#                <h2 class="govuk-fieldset__heading">#}
