--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-summary.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-summary.html
@@ -1,8 +1,6 @@
 {% extends 'supply_chains/monthly-update-form-base.html' %}
 
-{% block body %}
-    <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
-
+{% block form %}
     <h2 class="govuk-heading-m">Check your answers</h2>
     <p class="govuk-body">Check all the information you've provided is correct before submitting the form.</p>
 
@@ -109,4 +107,4 @@
         </div>
     </form>
 
-{% endblock body %}
+{% endblock form %}
