--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
@@ -1,20 +1,33 @@
 {% extends 'supply_chains/monthly-update-form-base.html' %}
 
-{% block body %}
-    <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
-        {% include 'supply_chains/mu-existing-completion-date.html' %}
-        <form method="post" action="">
-            {% csrf_token %}
-            {{ form.is_completion_date_known }}
+{% block form %}
+    {% include 'supply_chains/includes/mu-existing-completion-date.html' %}
+    <form method="post" action="">
+        {% csrf_token %}
+        <div class="govuk-form-group{% if form.errors %} govuk-form-group--error{% endif %}">
+            <fieldset class="govuk-fieldset">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                    <h2 class="govuk-fieldset__heading ">
+                        {{ form.is_completion_date_known.label }}
+                    </h2>
+                </legend>
+                <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+                    {% for radio in form.is_completion_date_known %}
+                        {{ radio.tag }}
+                    {% endfor %}
+                </div>
+            </fieldset>
+        </div>
+{#        {{ form.is_completion_date_known }}#}
 {#            {% include 'supply_chains/includes/completion-date.html' with field=form.is_completion_date_known %}#}
-            <div class="govuk-button-group">
-                <button class="govuk-button" data-module="govuk-button" type="submit">
-                    Save and continue
-                </button>
+        <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button" type="submit">
+                Save and continue
+            </button>
 
-                <a href="{% url 'tlist' sc_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
-                    Cancel
-                </a>
-            </div>
-        </form>
-{% endblock body %}
+            <a href="{% url 'tlist' sc_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
+                Cancel
+            </a>
+        </div>
+    </form>
+{% endblock form %}
