--- a/defend_data_capture/supply_chains/templates/supply_chains/includes/completion-date.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/includes/completion-date.html
@@ -1,37 +1,26 @@
 <div class="govuk-form-group">
     <!-- completion-date.html -->
-    {{ form.changed_target_completion_date }}
-{#        <fieldset class="govuk-fieldset" role="group" aria-describedby="{{ widget.id }}-hint">#}
-{#            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">#}
-{#                <h2 class="govuk-fieldset__heading">#}
-{#                    {{ widget.label }}#}
-{#                </h2>#}
-{#            </legend>#}
-{#            <div id="{{ id }}-hint" class="govuk-hint">#}
-{#                For example, 12 11 2007#}
-{#            </div>#}
-{#            <div class="govuk-date-input" id="{{ id }}">#}
-{#                <div class="govuk-date-input__item">#}
-{#                    <div class="govuk-form-group">#}
-{#                        <label class="govuk-label govuk-date-input__label" for="{{ id }}-day">#}
-{#                            Day#}
-{#                        </label>#}
-{#                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="{{ id }}-day" name="{{ id }}-day" type="text" pattern="[0-9]*" inputmode="numeric"></div>#}
-{#                </div>#}
-{#                <div class="govuk-date-input__item">#}
-{#                    <div class="govuk-form-group">#}
-{#                        <label class="govuk-label govuk-date-input__label" for="{{ id }}-month">#}
-{#                            Month#}
-{#                        </label>#}
-{#                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="{{ id }}-month" name="{{ id }}-month" type="text" pattern="[0-9]*" inputmode="numeric"></div>#}
-{#                </div>#}
-{#                <div class="govuk-date-input__item">#}
-{#                    <div class="govuk-form-group">#}
-{#                        <label class="govuk-label govuk-date-input__label" for="{{ id }}-year">#}
-{#                            Year#}
-{#                        </label>#}
-{#                        <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="{{ id }}-year" name="{{ id }}-year" type="text" pattern="[0-9]*" inputmode="numeric"></div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </fieldset>#}
+    <fieldset class="govuk-fieldset" role="group" aria-describedby="{{ id }}-hint">
+        {% if legend %}
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                <p class="govuk-body">
+                    {{ legend }}
+                </p>
+            </legend>
+        {% endif %}
+        <div class="govuk-body">
+            {{ form.changed_target_completion_date.label }}
+        </div>
+        <div id="{{ id }}-hint" class="govuk-hint">
+            For example, 14 9 2021
+        </div>
+        <div class="govuk-date-input" id="{{ id }}-container">
+            {% for error in form.changed_target_completion_date.errors %}
+                <span class="govuk-error-message">
+                                <span class="govuk-visually-hidden">Error:</span> {{ error }}
+                            </span>
+            {% endfor %}
+            {{ form.changed_target_completion_date }}
+        </div>
+    </fieldset>
 </div>
