--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-revised-timing-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-revised-timing-form.html
@@ -1,24 +1,23 @@
 {% extends 'supply_chains/monthly-update-form-base.html' %}
 
-{% block body %}
-    <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
-    {% if strategic_action_update.strategic_action.target_completion_date %}
-        <div class="govuk-inset-text">
-            <h2 class="govuk-heading-s">Current estimated date of completion</h2>
-            <p>{{ strategic_action_update.strategic_action.target_completion_date|date:"j F Y" }}</p>
-        </div>
-    {% else %}
-        <div class="govuk-warning-text">
-            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-            <strong class="govuk-warning-text__text">
-                <span class="govuk-warning-text__assistive">Warning</span>
-                There's no expected completion date for this action.
-            </strong>
-        </div>
-    {% endif %}
+{% block form %}
+    {% include 'supply_chains/includes/mu-existing-completion-date.html' %}
     <form method="post" action="">
         {% csrf_token %}
-        {{ form.is_completion_date_known }}
+        <div class="govuk-form-group{% if form.errors %} govuk-form-group--error{% endif %}">
+            <fieldset class="govuk-fieldset">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                    <h2 class="govuk-fieldset__heading ">
+                        {{ form.is_completion_date_known.label }}
+                    </h2>
+                </legend>
+                <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+                    {% for radio in form.is_completion_date_known %}
+                        {{ radio.tag }}
+                    {% endfor %}
+                </div>
+            </fieldset>
+        </div>
         <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button" type="submit">
                 Save and continue
@@ -29,4 +28,4 @@
             </a>
         </div>
     </form>
-{% endblock body %}
+{% endblock form %}
