--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-status-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-status-form.html
@@ -1,11 +1,43 @@
 {% extends 'supply_chains/monthly-update-form-base.html' %}
 
-{% block body %}
-    <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
-    {% include 'supply_chains/mu-existing-completion-date.html' %}
+{% block form %}
+    {% include 'supply_chains/includes/mu-existing-completion-date.html' %}
     <form method="post" action="">
         {% csrf_token %}
-        {{ form.implementation_rag_rating }}
+        <div class="govuk-form-group{% if form.errors %} govuk-form-group--error{% endif %}">
+            <fieldset class="govuk-fieldset">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                    <h2 class="govuk-fieldset__heading ">
+                        {{ form.implementation_rag_rating.label }}
+                    </h2>
+                </legend>
+                <div class="govuk-body">
+                    <p>When considering if delivery of the strategic action is on track, consider:</p>
+                    <ul>
+                        <li>costs</li>
+                        <li>timings</li>
+                        <li>quality.</li>
+                    </ul>
+                    {% with strategic_action_update.strategic_action.last_submitted_update as previous_update %}
+                        {% if previous_update.content %}
+                            <p>Your last status update was {{ previous_update.implementation_rag_rating|lower }}</p>
+                        {% endif %}
+                    {% endwith %}
+                </div>
+                {% if form.implementation_rag_rating.errors %}
+                    {% for error in form.implementation_rag_rating.errors %}
+                        <span class="govuk-error-message">
+                                <span class="govuk-visually-hidden">Error:</span> {{ error }}
+                            </span>
+                    {% endfor %}
+                {% endif %}
+                <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+                    {% for radio in form.implementation_rag_rating %}
+                        {{ radio.tag }}
+                    {% endfor %}
+                </div>
+            </fieldset>
+        </div>
         <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button" type="submit">
                 Save and continue
@@ -16,4 +48,4 @@
             </a>
         </div>
     </form>
-{% endblock body %}
+{% endblock form %}
