Using consistent header for SAUReview page

--- a/defend_data_capture/supply_chains/templates/sau_review.html
+++ b/defend_data_capture/supply_chains/templates/sau_review.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block body %}
-  <h1 class="govuk-heading-xl">Current monthly update for strategic action {{ strategic_action.name }}</h1>
+  <h1 class="govuk-heading-xl">Current monthly update for {{ strategic_action.name }}</h1>
 
   <div>
     <span>
